--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.3.2",
+    "router": "^1.3.3",
     "vue": "^2.6.10",
+    "vue-material": "^1.0.0-beta-11",
+    "vue-router": "^3.1.3",
     "vuetify": "^2.1.0"
   },
   "devDependencies": {
