--- a/package.json
+++ b/package.json
@@ -51,5 +51,17 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ]
+  ],
+  "description": "```\r npm install\r ```",
+  "main": "babel.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LEulin/Final-Web3.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/LEulin/Final-Web3/issues"
+  },
+  "homepage": "https://github.com/LEulin/Final-Web3#readme"
 }
