--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.3.2",
     "jquery": "^3.4.1",
@@ -15,6 +16,7 @@
     "sweetalert": "^2.1.2",
     "sweetalert2": "^9.3.16",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.5",
     "vue-material": "^1.0.0-beta-11",
     "vue-router": "^3.1.3",
     "vue-sweetalert2": "^2.1.5",
