--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "api-js": "0.0.0",
+    "auth": "0.0.9",
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.1.0",
+    "config.js": "^0.1.0",
     "core-js": "^3.3.2",
     "jquery": "^3.4.1",
     "router": "^1.3.3",
@@ -17,6 +20,7 @@
     "sweetalert2": "^9.3.16",
     "vue": "^2.6.10",
     "vue-material": "^1.0.0-beta-11",
+    "vue-pusher": "^1.0.0",
     "vue-router": "^3.1.3",
     "vue-sweetalert2": "^2.1.5",
     "vuetify": "^2.1.0"
