--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "config.js": "^0.1.0",
     "core-js": "^3.3.2",
     "jquery": "^3.4.1",
+    "mixin-interface-api": "^0.1.32",
     "router": "^1.3.3",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^9.3.16",
@@ -24,7 +25,8 @@
     "vue-pusher": "^1.0.0",
     "vue-router": "^3.1.3",
     "vue-sweetalert2": "^2.1.5",
-    "vuetify": "^2.1.0"
+    "vuetify": "^2.1.0",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
